fixed color switcher on small screens

--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -119,6 +119,10 @@
   justify-content: space-between;
 }
 
+.align-start {
+  align-items: start;
+}
+
 .align-center {
   align-items: center;
 }
